--- a/infohm/src/main/res/values/colors.xml
+++ b/infohm/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 	<color name="text_hint_color">#42000000</color>
 	<color name="text_disabled_color">#42000000</color>
 	<color name="text_highlight_color">#ff2196f3</color>
+	<color name="text_error_color">#fff44336</color>
 
 	<!-- Button colors. -->
 	<color name="button_primary_color">#ddffffff</color>
@@ -23,7 +24,6 @@
 
 	<!-- Drawer clolors. -->
 	<color name="drawer_background_color">#ffeeeeee</color>
-	<color name="drawer_divider_color">#14000000</color>
 
 	<!-- ActionBar colors. -->
 	<color name="actionbar_primary_color">#ff01579b</color>
@@ -31,7 +31,7 @@
 	<color name="actionbar_accent_color">#ff0288d1</color>
 	<color name="actionbar_title_color">#ffffffff</color>
 
-	<!-- Dialog colors. -->
-	<color name="dialog_divider_color">#14000000</color>
+	<!-- Divider color. -->
+	<color name="divider_color">#14000000</color>
 
 </resources>
