--- a/infohm/src/main/res/layout/adapter_events.xml
+++ b/infohm/src/main/res/layout/adapter_events.xml
@@ -26,7 +26,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:padding="10dp"
-			style="?attr/textAppearance" />
+			style="?attr/textAppearanceBody" />
 
 	</LinearLayout>
 
