--- a/infohm/src/main/res/values/attrs.xml
+++ b/infohm/src/main/res/values/attrs.xml
@@ -5,28 +5,32 @@
 	<attr name="slidingTabIndicatorColor" type="color" />
 
 	<!-- Dimension references. -->
+	<attr name="horizontalSpaceBorder" type="dimension" />
+	<attr name="horizontalSpaceKeyline" type="dimension" />
 	<attr name="verticalSpaceBorder" type="dimension" />
-	<attr name="verticalSpaceKeyline" type="dimension" />
 	<attr name="cardViewGuttersPadding" type="dimension" />
 	<attr name="cardViewContentPadding" type="dimension" />
 	<attr name="listViewContentPadding" type="dimension" />
 	<attr name="slidingTabIndicatorHeight" type="dimentsion" />
 
 	<!-- Text styleables. -->
-	<attr name="textAppearance" type="reference" />
+	<attr name="textAppearanceDisplay" type="reference" />
 	<attr name="textAppearanceHeadline" type="reference" />
 	<attr name="textAppearanceTitle" type="reference" />
+	<attr name="textAppearanceBody" type="reference" />
 	<attr name="textAppearanceSubheader" type="reference" />
 	<attr name="textAppearanceCaption" type="reference" />
 
 	<!-- Widget styleables. -->
 	<attr name="textViewStyle" type="reference" />
 	<attr name="textViewSecondaryStyle" type="reference" />
+	<attr name="editTextStyle" type="reference" />
 	<attr name="buttonStyle" type="reference" />
 	<attr name="buttonSecondaryStyle" type="reference" />
 	<attr name="buttonFlatStyle" type="reference" />
 	<attr name="buttonFlatSecondaryStyle" type="reference" />
 	<attr name="slidingTabTextViewStyle" type="reference" />
+	<attr name="dividerStyle" type="reference" />
 
 	<!-- Drawer styleables. -->
 	<attr name="drawerStyle" type="reference" />
@@ -36,7 +40,6 @@
 	<attr name="dialogStyle" type="reference" />
 	<attr name="dialogTitleStyle" type="reference" />
 	<attr name="dialogContentStyle" type="reference" />
-	<attr name="dialogDividerStyle" type="reference" />
 	<attr name="dialogActionsStyle" type="reference" />
 
 </resources>
