--- a/infohm/src/main/res/values/dimens.xml
+++ b/infohm/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<!-- Text sizes. -->
+	<dimen name="text_display_size">34sp</dimen>
 	<dimen name="text_headline_size">24sp</dimen>
 	<dimen name="text_title_size">20sp</dimen>
 	<dimen name="text_subheader_size">16sp</dimen>
