--- a/infohm/src/main/res/values/themes.xml
+++ b/infohm/src/main/res/values/themes.xml
@@ -14,28 +14,32 @@
 		<item name="slidingTabIndicatorColor">@android:color/white</item>
 
 		<!-- Dimension values. -->
-		<item name="verticalSpaceBorder">16dp</item>
-		<item name="verticalSpaceKeyline">72dp</item>
+		<item name="horizontalSpaceBorder">16dp</item>
+		<item name="horizontalSpaceKeyline">72dp</item>
+		<item name="verticalSpaceBorder">48dp</item>
 		<item name="cardViewGuttersPadding">8dp</item>
 		<item name="cardViewContentPadding">16dp</item>
 		<item name="listViewContentPadding">8dp</item>
 		<item name="slidingTabIndicatorHeight">3dp</item>
 
 		<!-- Text appearances. -->
-		<item name="textAppearance">@style/TextAppearance</item>
+		<item name="textAppearanceDisplay">@style/TextAppearance.Display</item>
 		<item name="textAppearanceHeadline">@style/TextAppearance.Headline</item>
 		<item name="textAppearanceTitle">@style/TextAppearance.Title</item>
+		<item name="textAppearanceBody">@style/TextAppearance.Body</item>
 		<item name="textAppearanceSubheader">@style/TextAppearance.Subheader</item>
 		<item name="textAppearanceCaption">@style/TextAppearance.Caption</item>
 
 		<!-- Widget styles. -->
 		<item name="textViewStyle">@style/Widget.TextView</item>
 		<item name="textViewSecondaryStyle">@style/Widget.TextView.Secondary</item>
+		<item name="editTextStyle">@style/Widget.EditText</item>
 		<item name="buttonStyle">@style/Widget.Button</item>
 		<item name="buttonSecondaryStyle">@style/Widget.Button.Secondary</item>
 		<item name="buttonFlatStyle">@style/Widget.Button.Flat</item>
 		<item name="buttonFlatSecondaryStyle">@style/Widget.Button.Flat.Secondary</item>
 		<item name="slidingTabTextViewStyle">@style/Widget.SlidingTab</item>
+		<item name="dividerStyle">@style/Widget.Divider</item>
 		<item name="drawerStyle">@style/Drawer</item>
 		<item name="drawerDividerStyle">@style/Drawer.Divider</item>
 		
@@ -78,12 +82,12 @@
 		<item name="buttonSecondaryStyle">@style/Widget.Button.Secondary</item>
 		<item name="buttonFlatStyle">@style/Widget.Button.Flat</item>
 		<item name="buttonFlatSecondaryStyle">@style/Widget.Button.Flat.Secondary</item>
+		<item name="dividerStyle">@style/Widget.Divider</item>
 
 		<!-- Dialog styles. -->
 		<item name="dialogStyle">@style/Dialog</item>
 		<item name="dialogTitleStyle">@style/Dialog.Title</item>
 		<item name="dialogContentStyle">@style/Dialog.Content</item>
-		<item name="dialogDividerStyle">@style/Dialog.Divider</item>
 		<item name="dialogActionsStyle">@style/Dialog.Actions</item>
 	</style>
 
