--- a/infohm/src/main/res/layout/activity_splash.xml
+++ b/infohm/src/main/res/layout/activity_splash.xml
@@ -6,11 +6,20 @@
 	android:background="@color/actionbar_primary_color">
 
 	<TextView
+		android:id="@+id/activity_splash_title"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_centerInParent="true"
 		android:text="@string/app_name"
 		android:textAppearance="?attr/textAppearanceTitle"
 		android:textColor="@android:color/white" />
+
+	<ProgressBar
+		android:id="@+id/activity_splash_progress"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="8dp"
+		android:layout_below="@id/activity_splash_title"
+		android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
