--- a/infohm/src/main/res/drawable-v21/button_flat_selector.xml
+++ b/infohm/src/main/res/drawable-v21/button_flat_selector.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-	android:color="#ffa9a9a9">
+	android:color="@color/ripple_default_color">
 
 	<item android:id="@android:id/mask">
 		<shape android:shape="rectangle">
-			<solid android:color="#ffdfdfdf" />
+			<solid android:color="@color/button_flat_pressed_color" />
 		</shape>
 	</item>
 
