--- a/infohm/src/main/res/values/colors.xml
+++ b/infohm/src/main/res/values/colors.xml
@@ -34,4 +34,10 @@
 	<!-- Divider color. -->
 	<color name="divider_color">#14000000</color>
 
+	<!-- Adapter colors. -->
+	<color name="adapter_item_color">#ffdfdfdf</color>
+
+	<!-- Ripple colors. -->
+	<color name="ripple_default_color">#40000000</color>
+
 </resources>
