Adds controller and logic to the navigation drawer

--- a/infohm/src/main/res/drawable-v21/adapter_item_background_selector.xml
+++ b/infohm/src/main/res/drawable-v21/adapter_item_background_selector.xml
@@ -7,5 +7,6 @@
 			<solid android:color="@color/adapter_item_color" />
 		</shape>
 	</item>
+	<item android:drawable="@drawable/adapter_item_background"/>
 
 </ripple>
