Replaces bookmarks icons and adds padding to bookmarks adapter layout

--- a/infohm/src/main/res/layout/adapter_bookmarks.xml
+++ b/infohm/src/main/res/layout/adapter_bookmarks.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content">
+	android:layout_height="wrap_content"
+	android:paddingTop="?attr/listViewContentPadding"
+	android:paddingRight="?attr/listViewContentPadding"
+	android:paddingBottom="?attr/listViewContentPadding"
+	style="?attr/adapterStyle">
 
 	<ImageView
 		android:id="@+id/adapter_bookmarks_icon"
