--- a/infohm/src/main/res/layout/adapter_events.xml
+++ b/infohm/src/main/res/layout/adapter_events.xml
@@ -16,10 +16,21 @@
 			android:id="@+id/adapter_events_headline"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:padding="10dp"
+			android:paddingTop="10dp"
+			android:paddingRight="10dp"
+			android:paddingLeft="10dp"
 			android:singleLine="true"
 			android:ellipsize="end"
 			android:textAppearance="?attr/textAppearanceHeadline" />
+
+		<de.ladis.infohm.android.widget.TimestampView
+			android:id="@+id/adapter_events_timestamp"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingRight="10dp"
+			android:paddingLeft="10dp"
+			android:paddingBottom="10dp"
+			android:textAppearance="?attr/textAppearanceCaption" />
 
 		<TextView
 			android:id="@+id/adapter_events_content"
