--- a/infohm/src/main/res/menu/fragment_search.xml
+++ b/infohm/src/main/res/menu/fragment_search.xml
@@ -2,7 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:custom="http://schemas.android.com/apk/res-auto">
 
-	<item android:id="@+id/fragment_search_menu"
+	<item
+		android:id="@+id/fragment_search_menu"
 		android:title="@string/fragment_search_menu_title"
 		custom:showAsAction="always"
 		custom:actionViewClass="android.support.v7.widget.SearchView" />
