--- a/infohm/src/main/res/values/styles.xml
+++ b/infohm/src/main/res/values/styles.xml
@@ -112,6 +112,7 @@
 	</style>
 
 	<style name="ActionBar.Title" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+		<item name="android:layout_marginLeft">8dp</item>
 		<item name="android:textColor">@color/actionbar_title_color</item>
 	</style>
 
