--- a/infohm/src/main/res/layout/fragment_events_pager.xml
+++ b/infohm/src/main/res/layout/fragment_events_pager.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical">
@@ -13,6 +13,15 @@
 	<android.support.v4.view.ViewPager
 		android:id="@+id/fragment_events_pager"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent" />
+		android:layout_height="match_parent"
+		android:layout_below="@id/fragment_events_pager_tabs" />
 
-</LinearLayout>
+	<ImageButton
+		style="?attr/buttonFloatStyle"
+		android:id="@+id/frabment_events_pager_floating"
+		android:layout_marginTop="4dp"
+		android:layout_marginRight="20dp"
+		android:layout_alignParentRight="true"
+		android:src="@drawable/events_star_publisher" />
+
+</RelativeLayout>
