--- a/infohm/src/main/res/values/attrs.xml
+++ b/infohm/src/main/res/values/attrs.xml
@@ -33,6 +33,7 @@
 	<attr name="buttonSecondaryStyle" type="reference" />
 	<attr name="buttonFlatStyle" type="reference" />
 	<attr name="buttonFlatSecondaryStyle" type="reference" />
+	<attr name="buttonFloatStyle" type="reference" />
 	<attr name="slidingTabTextViewStyle" type="reference" />
 	<attr name="adapterStyle" type="reference" />
 	<attr name="dividerStyle" type="reference" />
