--- a/infohm/src/main/res/layout/activity_main.xml
+++ b/infohm/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
 
 	<FrameLayout style="?attr/drawerStyle">
 
-		<fragment class="de.ladis.infohm.android.fragment.drawer.NavigationDrawerFragment"
+		<fragment class="de.ladis.infohm.android.fragment.navigation.NavigationFragment"
 			android:id="@+id/activity_events_fragment_navigation"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent" />
