--- a/infohm/src/main/res/layout/fragment_events.xml
+++ b/infohm/src/main/res/layout/fragment_events.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:orientation="vertical">
+	android:layout_height="match_parent">
 
 	<android.support.v4.widget.SwipeRefreshLayout
 		android:id="@+id/fragment_events_refresh"
@@ -17,4 +16,30 @@
 
 	</android.support.v4.widget.SwipeRefreshLayout>
 
-</LinearLayout>
+	<RelativeLayout
+		android:id="@+id/fragment_events_no_content"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:visibility="gone">
+
+		<ImageView
+			android:id="@+id/fragment_events_no_content_image"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:src="@drawable/events_no_content"
+			android:contentDescription="@string/fragment_events_no_content"
+			android:layout_centerInParent="true" />
+
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="12dp"
+			android:layout_below="@id/fragment_events_no_content_image"
+			android:layout_centerHorizontal="true"
+			android:text="@string/fragment_events_no_content"
+			android:textAppearance="?attr/textAppearanceTitle"
+			android:textColor="#ffcccccc" />
+
+	</RelativeLayout>
+
+</RelativeLayout>
