Adds refresh layout to star publisher fragment

--- a/infohm/src/main/res/layout/fragment_star_publisher.xml
+++ b/infohm/src/main/res/layout/fragment_star_publisher.xml
@@ -5,11 +5,18 @@
 	android:layout_height="match_parent"
 	android:orientation="vertical">
 
-	<android.support.v7.widget.RecyclerView
-		android:id="@+id/fragment_start_publisher_list"
-		android:scrollbars="vertical"
+	<android.support.v4.widget.SwipeRefreshLayout
+		android:id="@+id/fragment_start_publisher_refresh"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		tools:listitem="@layout/adapter_star_publisher" />
+		android:layout_height="match_parent">
+
+		<android.support.v7.widget.RecyclerView
+			android:id="@+id/fragment_start_publisher_list"
+			android:scrollbars="vertical"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			tools:listitem="@layout/adapter_star_publisher" />
+
+	</android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
