--- a/infohm/src/main/res/layout/fragment_events.xml
+++ b/infohm/src/main/res/layout/fragment_events.xml
@@ -26,7 +26,7 @@
 			android:id="@+id/fragment_events_no_content_image"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:src="@drawable/events_no_content"
+			android:src="@drawable/no_content"
 			android:contentDescription="@string/fragment_events_no_content"
 			android:layout_centerInParent="true" />
 
