--- a/infohm/src/main/res/layout/fragment_search.xml
+++ b/infohm/src/main/res/layout/fragment_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
@@ -8,4 +8,30 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content" />
 
-</FrameLayout>
+	<RelativeLayout
+		android:id="@+id/fragment_search_no_content"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:visibility="gone">
+
+		<ImageView
+			android:id="@+id/fragment_search_no_content_image"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:src="@drawable/no_content"
+			android:contentDescription="@string/fragment_search_no_content"
+			android:layout_centerInParent="true" />
+
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="12dp"
+			android:layout_below="@id/fragment_search_no_content_image"
+			android:layout_centerHorizontal="true"
+			android:text="@string/fragment_search_no_content"
+			android:textAppearance="?attr/textAppearanceTitle"
+			android:textColor="#ffcccccc" />
+
+	</RelativeLayout>
+
+</RelativeLayout>
