--- a/infohm/src/main/res/xml/syncadapter.xml
+++ b/infohm/src/main/res/xml/syncadapter.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <sync-adapter xmlns:android="http://schemas.android.com/apk/res/android"
-	android:contentAuthority="de.ladis.infohm.provider"
+	android:contentAuthority="de.ladis.infohm.provider.CacheProvider"
 	android:accountType="de.infohm"
 	android:userVisible="true"
 	android:supportsUploading="false"
