--- a/infohm/src/main/res/layout/fragment_daily_meals.xml
+++ b/infohm/src/main/res/layout/fragment_daily_meals.xml
@@ -1,76 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:custom="http://schemas.android.com/apk/res-auto"
+	android:id="@+id/fragment_daily_meals_refresh"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
-	<android.support.v7.widget.CardView
-		android:id="@+id/fragment_daily_meals_card"
+	<ScrollView
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_margin="?attr/cardViewGuttersPadding"
-		custom:cardCornerRadius="4dp">
+		android:layout_height="match_parent">
 
-		<LinearLayout
+		<android.support.v7.widget.CardView
+			android:id="@+id/fragment_daily_meals_card"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:orientation="vertical">
+			android:layout_margin="?attr/cardViewGuttersPadding"
+			custom:cardCornerRadius="4dp">
 
 			<LinearLayout
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:orientation="vertical"
-				android:padding="?attr/cardViewContentPadding">
+				android:orientation="vertical">
 
-				<de.ladis.infohm.android.widget.TimestampView
-					android:id="@+id/fragment_daily_meals_headline"
+				<LinearLayout
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:paddingTop="10dp"
-					android:paddingRight="10dp"
-					android:paddingLeft="10dp"
-					android:singleLine="true"
-					android:ellipsize="end"
-					android:textAppearance="?attr/textAppearanceHeadline" />
+					android:orientation="vertical"
+					android:padding="?attr/cardViewContentPadding">
 
-				<TextView
-					android:id="@+id/fragment_daily_meals_date"
+					<de.ladis.infohm.android.widget.TimestampView
+						android:id="@+id/fragment_daily_meals_headline"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:paddingTop="10dp"
+						android:paddingRight="10dp"
+						android:paddingLeft="10dp"
+						android:singleLine="true"
+						android:ellipsize="end"
+						android:textAppearance="?attr/textAppearanceHeadline" />
+
+					<TextView
+						android:id="@+id/fragment_daily_meals_date"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:paddingRight="10dp"
+						android:paddingLeft="10dp"
+						android:paddingBottom="10dp"
+						android:textAppearance="?attr/textAppearanceCaption" />
+
+				</LinearLayout>
+
+				<LinearLayout
+					android:id="@+id/fragment_daily_meals_offers"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:paddingRight="10dp"
-					android:paddingLeft="10dp"
-					android:paddingBottom="10dp"
-					android:textAppearance="?attr/textAppearanceCaption" />
+					android:orientation="vertical"
+					android:paddingRight="?attr/cardViewContentPadding"
+					android:paddingLeft="?attr/cardViewContentPadding"
+					android:paddingBottom="8dp" />
+
+				<View style="?attr/dividerStyle" />
+
+				<RelativeLayout
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content">
+
+					<Button
+						style="?attr/buttonFlatStyle"
+						android:id="@+id/fragment_daily_meals_more"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_alignParentRight="true"
+						android:text="@string/fragment_daily_meals_more" />
+
+				</RelativeLayout>
 
 			</LinearLayout>
 
-			<LinearLayout
-				android:id="@+id/fragment_daily_meals_offers"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:orientation="vertical"
-				android:paddingRight="?attr/cardViewContentPadding"
-				android:paddingLeft="?attr/cardViewContentPadding"
-				android:paddingBottom="8dp" />
+		</android.support.v7.widget.CardView>
 
-			<View style="?attr/dividerStyle" />
+	</ScrollView>
 
-			<RelativeLayout
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content">
-
-				<Button
-					style="?attr/buttonFlatStyle"
-					android:id="@+id/fragment_daily_meals_more"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_alignParentRight="true"
-					android:text="@string/fragment_daily_meals_more" />
-
-			</RelativeLayout>
-
-		</LinearLayout>
-
-	</android.support.v7.widget.CardView>
-
-</FrameLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
