--- a/infohm/src/main/res/layout/fragment_search.xml
+++ b/infohm/src/main/res/layout/fragment_search.xml
@@ -14,23 +14,24 @@
 		android:layout_height="match_parent"
 		android:visibility="gone">
 
-		<ImageView
-			android:id="@+id/fragment_search_no_content_image"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:src="@drawable/no_content"
-			android:contentDescription="@string/fragment_search_no_content"
-			android:layout_centerInParent="true" />
-
 		<TextView
+			android:id="@+id/fragment_search_no_content_text"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginTop="12dp"
-			android:layout_below="@id/fragment_search_no_content_image"
-			android:layout_centerHorizontal="true"
+			android:layout_centerInParent="true"
 			android:text="@string/fragment_search_no_content"
 			android:textAppearance="?attr/textAppearanceTitle"
-			android:textColor="#ffcccccc" />
+			android:textColor="#ffcccccc"
+			android:gravity="center" />
+
+		<ImageView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="12dp"
+			android:layout_above="@id/fragment_search_no_content_text"
+			android:layout_centerHorizontal="true"
+			android:src="@drawable/no_content"
+			android:contentDescription="@string/fragment_search_no_content" />
 
 	</RelativeLayout>
 
