--- a/infohm/src/main/res/layout/fragment_daily_meals.xml
+++ b/infohm/src/main/res/layout/fragment_daily_meals.xml
@@ -7,76 +7,110 @@
 
 	<ScrollView
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+		android:layout_height="match_parent"
+		android:fillViewport="true">
 
-		<android.support.v7.widget.CardView
-			android:id="@+id/fragment_daily_meals_card"
+		<RelativeLayout
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_margin="?attr/cardViewGuttersPadding"
-			custom:cardCornerRadius="4dp">
+			android:layout_height="match_parent">
 
-			<LinearLayout
+			<android.support.v7.widget.CardView
+				android:id="@+id/fragment_daily_meals_card"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:orientation="vertical">
-
+				android:layout_margin="?attr/cardViewGuttersPadding"
+				custom:cardCornerRadius="4dp">
+	
 				<LinearLayout
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:orientation="vertical"
-					android:padding="?attr/cardViewContentPadding">
+					android:orientation="vertical">
 
-					<de.ladis.infohm.android.widget.TimestampView
-						android:id="@+id/fragment_daily_meals_headline"
+					<LinearLayout
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
-						android:paddingTop="10dp"
-						android:paddingRight="10dp"
-						android:paddingLeft="10dp"
-						android:singleLine="true"
-						android:ellipsize="end"
-						android:textAppearance="?attr/textAppearanceHeadline" />
+						android:orientation="vertical"
+						android:padding="?attr/cardViewContentPadding">
 
-					<TextView
-						android:id="@+id/fragment_daily_meals_date"
+						<de.ladis.infohm.android.widget.TimestampView
+							android:id="@+id/fragment_daily_meals_headline"
+							android:layout_width="match_parent"
+							android:layout_height="wrap_content"
+							android:paddingTop="10dp"
+							android:paddingRight="10dp"
+							android:paddingLeft="10dp"
+							android:singleLine="true"
+							android:ellipsize="end"
+							android:textAppearance="?attr/textAppearanceHeadline" />
+
+						<TextView
+							android:id="@+id/fragment_daily_meals_date"
+							android:layout_width="match_parent"
+							android:layout_height="wrap_content"
+							android:paddingRight="10dp"
+							android:paddingLeft="10dp"
+							android:paddingBottom="10dp"
+							android:textAppearance="?attr/textAppearanceCaption" />
+
+					</LinearLayout>
+
+					<LinearLayout
+						android:id="@+id/fragment_daily_meals_offers"
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
-						android:paddingRight="10dp"
-						android:paddingLeft="10dp"
-						android:paddingBottom="10dp"
-						android:textAppearance="?attr/textAppearanceCaption" />
+						android:orientation="vertical"
+						android:paddingRight="?attr/cardViewContentPadding"
+						android:paddingLeft="?attr/cardViewContentPadding"
+						android:paddingBottom="8dp" />
+
+					<View style="?attr/dividerStyle" />
+
+					<RelativeLayout
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content">
+
+						<Button
+							style="?attr/buttonFlatStyle"
+							android:id="@+id/fragment_daily_meals_more"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:layout_alignParentRight="true"
+							android:text="@string/fragment_daily_meals_more" />
+
+					</RelativeLayout>
 
 				</LinearLayout>
 
-				<LinearLayout
-					android:id="@+id/fragment_daily_meals_offers"
-					android:layout_width="match_parent"
+			</android.support.v7.widget.CardView>
+
+			<RelativeLayout
+				android:id="@+id/fragment_daily_meals_no_content"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:visibility="gone">
+
+				<TextView
+					android:id="@+id/fragment_daily_meals_no_content_text"
+					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:orientation="vertical"
-					android:paddingRight="?attr/cardViewContentPadding"
-					android:paddingLeft="?attr/cardViewContentPadding"
-					android:paddingBottom="8dp" />
+					android:layout_centerInParent="true"
+					android:text="@string/fragment_daily_meals_no_content"
+					android:textAppearance="?attr/textAppearanceTitle"
+					android:textColor="#ffcccccc"
+					android:gravity="center" />
 
-				<View style="?attr/dividerStyle" />
+				<ImageView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginBottom="12dp"
+					android:layout_above="@id/fragment_daily_meals_no_content_text"
+					android:layout_centerHorizontal="true"
+					android:src="@drawable/no_content"
+					android:contentDescription="@string/fragment_daily_meals_no_content" />
 
-				<RelativeLayout
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content">
+			</RelativeLayout>
 
-					<Button
-						style="?attr/buttonFlatStyle"
-						android:id="@+id/fragment_daily_meals_more"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_alignParentRight="true"
-						android:text="@string/fragment_daily_meals_more" />
-
-				</RelativeLayout>
-
-			</LinearLayout>
-
-		</android.support.v7.widget.CardView>
+		</RelativeLayout>
 
 	</ScrollView>
 
